--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,6 @@ baseurl = "/"
 languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
-theme = "terminal"
 paginate = 5
 
 [params]
@@ -98,4 +97,4 @@ paginate = 5
   # --
   # replacements = "github.com/panr/hugo-theme-terminal -> themes/terminal"
 [[module.imports]]
-  path = 'github.com/panr/hugo-theme-terminal'
+  path = 'terminal'
