Edit title of blog

--- a/hugo.toml
+++ b/hugo.toml
@@ -71,11 +71,11 @@ googleAnalytics = ""
 [languages]
   [languages.en]
     languageName = "English"
-    title = "Terminal"
-    subtitle = "A simple, retro theme for Hugo"
-    owner = ""
-    keywords = ""
-    copyright = ""
+    title = "Seong Hyeon's Tech blog"
+    subtitle = "Tech blog"
+    owner = "tmdgusya"
+    keywords = "tech IT software java kotlin go python javascript"
+    copyright = "tmdgusya"
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
